--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://cilasmiguel-git.github.io/QR_Code_YT.git",
+  "homepage": "https://cilasmiguel-git.github.io/QR_Code_YT",
   "eslintConfig": {
     "extends": [
       "react-app",
